# tick-manager

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  dirs.sh  logging_config.yaml  mkdocs.yml  pyproject.toml
docs/: index.md  modules.md
scripts/: setup_tick_manager.sh
tests/: test_api.py  test_cli.py  test_foo.py  test_operations.py
tests/api/: test_example_api.py
tests/cli/: test_example_cli.py
tests/config/: test_logging.py  test_settings.py
tests/operations/: test_example.py
tick_manager/: __init__.py
tick_manager/api/: example_main.py  main.py
tick_manager/cli/: example_main.py  main.py
tick_manager/config/: exceptions.py  logging.py  settings.py
tick_manager/models/: example_schema.py  schemas.py
tick_manager/operation/: core.py
tick_manager/operations/: __init__.py  core.py  example.py  exceptions.py
tick_manager/utils/: helpers.py
